change illegal-access to add-exports